fixing overflow and color on drop nav for responsive

--- a/src/styles/site.less
+++ b/src/styles/site.less
@@ -160,8 +160,7 @@ ul.nav-tabs li {
 		filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 
 		&.navbar-nav {
-			margin-left: 0;
-			margin-right: 0;
+			margin: 0;
 		}
 	}
 }
